--- a/css/style.css
+++ b/css/style.css
@@ -75,4 +75,31 @@ h1, h2, h3, h4, h5, h6 {
 :root {
 	--index: calc(1vw + 1vh);
 }
-							/*# Header section */
+							/*# Base */
+html, body {
+	background-color: black;
+}
+.slider{
+	height: 100%;
+}
+.slider__wrapper{
+	will-change: transform;
+	transform-style: preserve-3d;
+}
+.slider__layer{
+	position: absolute;
+	inset: 0; /*# top 0, bottom 0, left 0, right 0*/
+	background-size: cover;
+	background-position: center;
+	will-change: transform;
+}
+.slider__layer::before{
+	content: '';
+	position: absolute;
+	inset: 0;
+	z-index: 1;
+	box-shadow: inset 0 0 250px rgb(0 0 0 / .3);
+}
+.slider__item{
+	overflow: hidden;
+}
